fixed project section spacing

--- a/src/components/home.css
+++ b/src/components/home.css
@@ -155,10 +155,7 @@
         color: var(--second-color);
     }
 }
-@media screen and (min-width: 576px){
-    
 
-}
 
 @media screen and (min-width: 1150px) {
     .home__container{
